syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.book.module";

service AuthorSendService {
  rpc checkAuthor(AuthorCreateRequest) returns (AuthorCreateResponse) {}

  rpc getAuthor(AuthorRequest) returns (AuthorResponse) {}
}

message AuthorCreateRequest {
  int64  id        = 1;
  string firstname = 2;
  string lastname  = 3;
}

message AuthorCreateResponse {
  int64 id = 1;
}

message AuthorRequest {
  int64 id = 1;
}

message AuthorResponse {
  int64  id        = 1;
  string firstname = 2;
  string lastname  = 3;
}